--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h2 class="section-title">How It Works</h2>
           <div class="steps-container">
             <div class="steps-visualization">
-              <img src="./Frame 11.png" alt="Innflux Protocol Flow" class="flow-diagram" />
+              <img src="./structure.png" alt="Innflux Protocol Flow" class="flow-diagram" />
               <div class="step-numbers">
                 <span class="active">01</span>
                 <span>02</span>
